# instagram-auto-operations

./: .env_tmp  README.md  main.py  operations.py  pyproject.toml  requirements.txt
logs/: auto_likes_log.csv  auto_log.csv
