[tool.poetry]
name = "instagram-auto-operations"
version = "1.0.1"
description = "インスタグラム自動運用プログラム"
authors = ["Shu Ogasawara <littlemoneyseeker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.3"
schedule = "^1.2.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
